# Arduino-RGB-Tools

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README  README.markdown  README.md  RGBTools.cpp  RGBTools.h  doxygen.conf  keywords.txt
RGBTools/: RGBTools.cpp  RGBTools.h  keywords.txt
RGBTools/examples/: fadeToColor.ino  multiLEDfadeToColor.ino  setAColor.ino  setAColor2.ino
docs/: RGBTools_8h_source.html  annotated.html  classRGBTools-members.html  classRGBTools.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
docs/search/: all_0.js  all_1.js  all_2.js  classes_0.js  functions_1.js  searchdata.js
examples/: CMakeLists.txt  fadeToColor.ino  multiLEDfadeToColor.ino  setAColor2.ino
examples/fadeToColor/: CMakeLists.txt  fadeToColor.ino
examples/setColor/: setColor.ino
src/: RGBTools.cpp  RGBTools.h
tests/: CMakeLists.txt  compare.sh  fadeToColor.cpp  fadeToColor.expected  setColor.cpp  setColor.expected  setColor.ino
